revise sections and figures

--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -4,48 +4,70 @@ In this study, we explored the feasibility of using EEG to study network variant
 
 Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small and not practically relevant, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes. In the few cases where effect sizes were considered practically relevant, they were still at most small, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes that were small and practically relevant---or comparable to fMRI effect sizes in a handful of cases---we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
 
+## Consistency with related neurophysiological connectomics literature
+
+Consistent with previous EEG research on resting state networks [@samoginetal_FrequencyDependentFunctional_2020], we found that functional connectivity was generally most prominent in the alpha band, which is likely due to the fact that alpha band oscillations are dominant during resting state and are more strongly correlated with known resting state networks, such as the default-mode network [@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019]. Notably, the prominence of alpha band functional connectivity coincided with the strongest differences in functional connectome similarity within versus between individuals, which may indicate that EEG network variants are more sensitive to task state than fMRI network variants [cf. @grattonetal_FunctionalBrainNetworks_2018]. In support of this point, although we found that the relative strength of both within and between individual similarities generally shifted in the same direction at different timescales, the variability of these shifts was greater between than within individuals, indicating that functional connectomes became more differentiated between individuals as a function timescale---with smaller changes within individuals. The smaller changes we found within individuals were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales; with stronger effects for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index as in @colcloughetal_HowReliableAre_2016. 
+
+Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands; with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 also indicate that (1) functional connectomes may became more differentiated between individuals as a function timescale, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
+
+<!-- Less clear, however, is how our findings relate to previous EEG research demonstrating that resting state functional connectomes are unique to individuals and can be used to distinguish between them [@laroccaetal_HumanBrainDistinctiveness_2014].  -->
+
+<!-- Consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG; @colcloughetal_HowReliableAre_2016] research, we found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales. Additionally, as in @colcloughetal_HowReliableAre_2016, we found that this effect was stronger for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index.  -->
+
 ## Factors that may contribute to differences between EEG and fMRI
 
-Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the spatial resolutions of the two modalities, the methods used to estimate functional connectivity, and the methods used to estimate network similarity.
+Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the spatial resolutions of the two modalities, and the methods used to estimate functional connectivity.
 
 Network variants are likely sensitive to the number of sites or electrodes used when estimating functional connectivity, as this influences spatial resolution and restricts the number of data points that can be used to compare any two functional connectomes. For example, with a small number of electrodes there may not be enough points in a functional connectome to adequately differentiate between individuals, resulting in between individual similarity being overstated. We assumed that our EEG system had a sufficient electrode density for studying network variants; however, fMRI studies typically use a much higher number of sites, for example @grattonetal_FunctionalBrainNetworks_2018 used a 333 site cortical parcellation, which allow for more precise depictions of the functional connectome. For this reason, higher density EEG systems (e.g., 128, 256, or 512 electrodes) may be better-equipped to study network variants [cf. @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006].
 
-Network variants are also likely sensitive to the methods used to estimate functional connectivity. We assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@fraschinietal_RobustnessFunctionalConnectivity_2019; @hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007]. Given that we found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. One potential solution would be to use phase and amplitude coupling methods that include zero-lag coupling---supplemented with tests against volume conduction [@cohen_AnalyzingNeuralTime_2014]. However, this approach is impractical for EEG connectomics research since it requires inspecting hundreds of thousands of individual connections to rule out possible contamination by volume conduction. Another potential solution would be to use non-zero lag coupling methods that might underestimate true connectivity by a lesser amount, such as the weighted phase lag index [@vincketal_ImprovedIndexPhasesynchronization_2011] for phase coupling.[^98] Regardless, the spatial mixing caused by volume conduction poses a difficult problem, and future work may benefit from testing the robustness of different functional connectivity methods for studying network variants with EEG [for a related example using magnetoencephalography, see @colcloughetal_HowReliableAre_2016].
+Network variants are also likely sensitive to the methods used to estimate functional connectivity. There are three assumptions related to this that are important to consider when evaluating our results, and which may be worth investigating in future research. First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is considered a consequence of its infraslow sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], rather than a consequence of the timeframe of the neural processes we are interested in; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Because we found that functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales, we believe this assumption was justified. However, we do note that longer recordings have been found to improve the stability of fMRI functional connectivity estimates in a qualitatively distinct way from higher sampling rates [@birnetal_EffectScanLength_2013], likely due to slow network changes being more fully captured by longer recordings. Future work may benefit from testing if the stability of EEG functional connectivity estimates gain a similar improvement from longer recordings, particularly at slower timescales such as the delta band.
 
-Source reconstruction
+Second, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants. For example, @vandevilleetal_WhenMakesYou_2021 found that fMRI functional connectomes exhibit short transient bursts of uniqueness even at short time windows, with different resting state networks becoming more or less unique between individuals as a function of time window length, suggesting that the dynamic aspects of network variants are worth exploring.
 
-This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016].
+Finally, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. However, this discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@fraschinietal_RobustnessFunctionalConnectivity_2019; @hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007]. Given that we found the strongest similarities between functional connectomes with homogeneously low patterns of coupling, non-zero lag phase and amplitude coupling methods may not be feasible for studying network variants at timescales where coupling is expected to be generally lower for a given state or task. One potential solution would be to use phase and amplitude coupling methods that include zero-lag coupling---supplemented with tests against volume conduction [@cohen_AnalyzingNeuralTime_2014]. However, this approach is impractical for EEG connectomics research since it requires inspecting hundreds of thousands of individual connections to rule out possible contamination by volume conduction. Another potential solution would be to use non-zero lag coupling methods that might underestimate true connectivity by a lesser amount, such as the weighted phase lag index [@vincketal_ImprovedIndexPhasesynchronization_2011] for phase coupling.[^98] Regardless, the spatial mixing caused by volume conduction poses a difficult problem, and future work may benefit from testing the robustness of different functional connectivity methods for studying network variants with EEG [for a related example using magnetoencephalography, see @colcloughetal_HowReliableAre_2016].
 
-"future works should investigate if the results reported so far at scalp level still hold when the EEG signals are reconstructed (by resolving the inverse problem) at source level where the effects due to spurious connections are, at least in part, attenuated [23]" 54 M. Fraschini, S.M. Pani and L. Didaci et al. / Pattern Recognition Letters 125 (2019) 49–54"
+<!-- Source reconstruction -->
+
+<!-- This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. -->
+
+<!-- "future works should investigate if the results reported so far at scalp level still hold when the EEG signals are reconstructed (by resolving the inverse problem) at source level where the effects due to spurious connections are, at least in part, attenuated [23]" 54 M. Fraschini, S.M. Pani and L. Didaci et al. / Pattern Recognition Letters 125 (2019) 49–54" -->
 
 <!-- Discuss RV coefficient vs. pearson correlation -->
 
-
-## Consistency with related neurophysiological connectomics literature
-
-Consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG; @colcloughetal_HowReliableAre_2016] research, we found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales.
-
-
-
-
-
-
-
-
-However, we also note that a number of EEG studies have demonstrated that phase coupling functional connectomes [@nentwichetal_FunctionalConnectivityEEG_2020] can distinguish between people...
-
-
-Previous research has found that functional connectomes are surprisingly similar within individuals---with few exceptions, our results are consistent with this finding. However, our results also indicate that functional connectomes are surprisingly similar between individuals (with few exceptions). The implication of our results...
-
-
-
 ## Limitations
 
-There are several methodological and statistical assumptions that are important to consider when evaluating our results.
+In addition to the discussion above, the following methodological and statistical assumptions are important to consider when evaluating our results.
 
-Second, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is considered a consequence of its infraslow sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], rather than a consequence of the timeframe of the neural processes we are interested in; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Additionally, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants [e.g., @vandevilleetal_WhenMakesYou_2021].
+<!-- First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is considered a consequence of its infraslow sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], rather than a consequence of the timeframe of the neural processes we are interested in; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Additionally, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants [e.g., @vandevilleetal_WhenMakesYou_2021]. -->
 
-Our choice to only use resting state data may have also influenced our results. Previous fMRI and EEG studies have found that averaging over different tasks leads to more stable individual differences...
+Our choice to only use resting state data may have also influenced our results. Although resting state data provides a good representation of intrinsic brain activity [@raichle_TwoViewsBrain_2010], ..., 
+
+Previous fMRI and EEG studies have found that averaging over different tasks leads to more stable individual differences...
+
+Discuss generalizability and sample size
+
+Discuss dimensionality reduction for measuring similarity
+
+
+## Implications for future research
+
+The main implication of our findings is that---if EEG network variants do exist---there is no guarantee that their presence can be detected in a given individual or data set, given the background model. 
+
+This is a particularly salient point for researchers who are interested in network variants for clinical and other applied purposes...
+
+This is a particularly salient point for future research interested in network variants as biomarkers 
+
+seeking to develop neuroimaging-based biomarkers with real-world utility in areas such as biometrics (H.-L. Chan, Kuo, Cheng, & Chen, 2018) and human lifespan development (Garrett et al., 2013)
+
+There is evidence to suggest EEG network variants do exist. Discuss fingerprinting and phenotyping studies...
+
+
+
+Systematic investigation into the factors that influence the detection of EEG network variants... preprocessing, how volume conduction is dealt with, whether between-person differences are sensitive to timescale or task, choice of connectivity measure, method of comparing functional connectomes, etc.
+
+## Conclusion
+
+In this study, we explored the feasibility of using EEG to study network variants. We found at most weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants. In future studies, it would be interesting to see whether network variants in EEG functional connectomes can be made more consistent through state or task manipulations that are known to bring out meaningful differences between participants [@finn_ItTimePut_2021; @finnetal_CanBrainState_2017; @finnetal_IdiosynchronySharedResponses_2020; @finnbandettini_MoviewatchingOutperformsRest_2020]; or to systematically investigate how decisions related to preprocessing or functional connectivity estimation influence the structure of EEG functional connectomes and their similarity within and between individuals, across task states and over time [@colcloughetal_HowReliableAre_2016; @fraschinietal_RobustnessFunctionalConnectivity_2019].
 
 <!-- Footnotes start --------------------------------------------------------->
 
