--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -5,25 +5,24 @@ A central goal of modern neuroscience is to identify the neural causes of variat
 <!-- Maybe worth culling these lists a little - mention the most relevant rather than providing an exhaustive list? -->
 
 Given the promise of these efforts, it is unsurprising to see individual-level approaches being used to investigate how whole brain functional networks differ between and within individuals [@demuruetal_FunctionalEffectiveWhole_2017; @garrettetal_MomenttomomentBrainSignal_2013; @grattonetal_FunctionalBrainNetworks_2018; @laumannetal_StabilityBOLDFMRI_2017; @miranda-dominguezetal_ConnectotypingModelBased_2014; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021; @vandevilleetal_WhenMakesYou_2021; @zanescoetal_BetweenpersonCorrelatesTemporal_2020], behave across different timescales [@betzeletal_IndividualizedEventStructure_2021; @vandevilleetal_WhenMakesYou_2021], change across the lifespan [@chanetal_DecreasedSegregationBrain_2014; @chanetal_LongtermPrognosisEducational_2021; @dosenbachetal_PredictionIndividualBrain_2010], respond to changing conditions [@grattonetal_FunctionalBrainNetworks_2018; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], predict differences in behaviour and cognition [@finnetal_FunctionalConnectomeFingerprinting_2015; @finnetal_CanBrainState_2017; @finnetal_IdiosynchronySharedResponses_2020; @finnbandettini_MoviewatchingOutperformsRest_2020],
-reflect dysfunction in behaviour and cognition [@kebetsetal_FrontolimbicNeuralVariability_2021], and reorganize with brain damage or disease [@baldassarreetal_BrainConnectivityNeurological_2016; @bassettbullmore_HumanBrainNetworks_2009; @carteretal_RestingInterhemisphericFunctional_2010; @laumannetal_BrainNetworkReorganisation_2021]. Nor is it surprising to see this knowledge applied in areas as diverse as personalized psychiatric treatment [@grattonetal_DefiningIndividualSpecificFunctional_2020; @scangosetal_ClosedloopNeuromodulationIndividual_2021], surgical planning [@ottenetal_MotorDeficitsCorrelate_2012; @tieetal_DefiningLanguageNetworks_2014; @wurnigetal_VariabilityClinicalFunctional_2013; @zhangetal_PreoperativeSensorimotorMapping_2009]; biometric security [@chanetal_ChallengesFuturePerspectives_2018], neurofeedback and brain-computer interfaces [@alkobyetal_CanWePredict_2018; @niv_ClinicalEfficacyPotential_2013; [@scangosetal_ClosedloopNeuromodulationIndividual_2021], biomarker discovery [@liuetal_AssessingSpatiotemporalVariability_2019; @shenetal_SignalComplexityIndicators_2021; @sorrentinoetal_ClinicalConnectomeFingerprints_2020], and innovation or improvement of research methods [@conroyetal_IntersubjectAlignmentHuman_2013; @dadietal_BenchmarkingFunctionalConnectomebased_2019; @dadietal_FinegrainAtlasesFunctional_2020; @hackeretal_RestingStateNetwork_2013; @sabuncuetal_FunctionbasedIntersubjectAlignment_2010].
+reflect dysfunction in behaviour and cognition [@kebetsetal_FrontolimbicNeuralVariability_2021], and reorganize with brain damage or disease [@baldassarreetal_BrainConnectivityNeurological_2016; @bassettbullmore_HumanBrainNetworks_2009; @carteretal_RestingInterhemisphericFunctional_2010; @laumannetal_BrainNetworkReorganisation_2021]. Nor is it surprising to see this knowledge applied in areas as diverse as personalized psychiatric treatment [@grattonetal_DefiningIndividualSpecificFunctional_2020; @scangosetal_ClosedloopNeuromodulationIndividual_2021], surgical planning [@ottenetal_MotorDeficitsCorrelate_2012; @tieetal_DefiningLanguageNetworks_2014; @wurnigetal_VariabilityClinicalFunctional_2013; @zhangetal_PreoperativeSensorimotorMapping_2009]; biometric security [@chanetal_ChallengesFuturePerspectives_2018], neurofeedback and brain-computer interfaces [@alkobyetal_CanWePredict_2018; @niv_ClinicalEfficacyPotential_2013; @scangosetal_ClosedloopNeuromodulationIndividual_2021], biomarker discovery [@liuetal_AssessingSpatiotemporalVariability_2019; @shenetal_SignalComplexityIndicators_2021; @sorrentinoetal_ClinicalConnectomeFingerprints_2020], and innovation or improvement of research methods [@conroyetal_IntersubjectAlignmentHuman_2013; @dadietal_BenchmarkingFunctionalConnectomebased_2019; @dadietal_FinegrainAtlasesFunctional_2020; @hackeretal_RestingStateNetwork_2013; @sabuncuetal_FunctionbasedIntersubjectAlignment_2010].
 
-An important question underlying each of these investigations---both for its practical and theoretical consequences---is *how much* and *in which ways* whole brain functional networks differ between and within individuals. Much of the current progress in this area comes from the study of spontaneous fluctuations in blood oxygenation level dependent (BOLD) signals recorded with functional magnetic resonance imaging (fMRI), which provide an indirect measure of brain activity though the process of neurovascular coupling [@hillman_CouplingMechanismSignificance_2014]. Recent investigations using fMRI have revealed that although whole brain functional networks share common organizing principles between individuals, there is an approximately equal amount of unshared organization [@grattonetal_FunctionalBrainNetworks_2018]. These individual-specific deviations in whole brain functional network organization are commonly referred to as *network variants* [@seitzmanetal_TraitlikeVariantsHuman_2019]. Importantly, comparisons between individuals have found that individuals can be reliably separated into subgroups based on similar distributions of network variants, suggesting that network variants may be trait-like [@gordonetal_IndividualVariabilitySystemLevel_2017; @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019]; and comparisons within individuals have indicated that individual whole brain functional networks are highly stable, with their organization being influenced only moderately by behavioural or cognitive state and mildly by time [@grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019].
+An important question underlying each of these investigations---both for its practical and theoretical consequences---is *how much* and *in which ways* whole brain functional networks differ between and within individuals. Much of the current progress in this area comes from the study of spontaneous fluctuations in blood oxygenation level dependent (BOLD) signals recorded with functional magnetic resonance imaging (fMRI), which provide an indirect measure of brain activity though the process of neurovascular coupling [@hillman_CouplingMechanismSignificance_2014]. Recent investigations using fMRI have revealed that although whole brain functional networks share common organizing principles between individuals, there is an approximately equal amount of unshared organization [@grattonetal_FunctionalBrainNetworks_2018]. These individual-specific deviations in whole brain functional network organization are commonly referred to as *network variants* [@seitzmanetal_TraitlikeVariantsHuman_2019]. Importantly, comparisons between individuals have found that individuals can be reliably separated into subgroups based on similar distributions of network variants, suggesting that network variants may be trait-like [@gordonetal_IndividualVariabilitySystemLevel_2017; @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019]; and comparisons within individuals have indicated that network variants are highly stable, with their organization being influenced only moderately by behavioural or cognitive state and mildly by time [@grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019].
 
-The neural causes of network variants and their stable trait-like features are not yet known; however, current evidence suggests that whole brain functional networks and their variants may reflect underlying structural networks and individual-specific subnetworks with long-term histories of coactivations between areas [see @gordonetal_HumanFrontoStriatalConnectivity_2021; @greeneetal_IntegrativeNetworkSpecificConnectivity_2020]. Moreover, both network variants and their clusters also appear to be behaviourally and cognitively relevant, as a number of studies have demonstrated they are predictive of individual differences in behaviour and cognition [e.g., @finnetal_FunctionalConnectomeFingerprinting_2015; @finnetal_CanBrainState_2017; @finnetal_IdiosynchronySharedResponses_2020; @finnbandettini_MoviewatchingOutperformsRest_2020]. Jointly, these findings provide convergent evidence that whole brain functional networks are stable and trait-like, with distinct anatomical and functional variations, and relationships to behaviour and cognition.
+The neural causes of network variants and their stable trait-like features are not yet known; however, current evidence suggests that they may reflect underlying structural networks and individual-specific subnetworks with long-term histories of coactivations between areas [see @gordonetal_HumanFrontoStriatalConnectivity_2021; @greeneetal_IntegrativeNetworkSpecificConnectivity_2020]. Moreover, both network variants and their clusters also appear to be behaviourally and cognitively relevant, as a number of studies have demonstrated they are predictive of individual differences in behaviour and cognition [e.g., @finnetal_FunctionalConnectomeFingerprinting_2015; @finnetal_CanBrainState_2017; @finnetal_IdiosynchronySharedResponses_2020; @finnbandettini_MoviewatchingOutperformsRest_2020]. <!-- Jointly, these findings provide convergent evidence that whole brain functional networks are stable and trait-like, with distinct anatomical and functional variations, and relationships to behaviour and cognition. -->
 
-In order to observe network variants reliably, previous research has used highly sampled fMRI data analyzed within individuals prior to making comparisons between individuals [@elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @laumannetal_FunctionalSystemAreal_2015; cf. @elliottetal_WhatTestRetestReliability_2020]. Analyzing data without this first step, for example by averaging activation maps across individuals voxel-wise, will obscure network variants, leaving only what is common between individuals [@grattonetal_FunctionalBrainNetworks_2018; @speelmanmcgann_HowMeanMean_2013]. This may cause substantial and relevant portions of variability in whole brain functional networks to be overlooked [@grattonetal_FunctionalBrainNetworks_2018], resulting in unreliable inferences about the ways in which whole brain functional networks differ between individuals [@elliottetal_WhatTestRetestReliability_2020]. Similarly, although the common features of whole brain functional networks can typically be detected with 5-10 minutes of fMRI data when averaging across individuals, more than 25 minutes of data (collected continuously or across multiple scans) are needed to reliably detect network variants [@andersonetal_ReproducibilitySingleSubjectFunctional_2011; @elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @hackeretal_RestingStateNetwork_2013; @laumannetal_FunctionalSystemAreal_2015]. Due to the high cost of scan times, this level of measurement is not feasible for a majority of labs collecting their own data [@elliottetal_GeneralFunctionalConnectivity_2019]. In sum, network variants offer a promising new direction for better understanding network function, but the conditions required to study them reliably using fMRI are a considerable practical barrier. 
+In order to observe network variants reliably, previous research has used highly sampled fMRI data analyzed within individuals prior to making comparisons between individuals [@elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @laumannetal_FunctionalSystemAreal_2015; cf. @elliottetal_WhatTestRetestReliability_2020]. Analyzing data without this first step, for example by averaging activation maps across individuals voxel-wise, will obscure network variants, leaving only what is common between individuals [@grattonetal_FunctionalBrainNetworks_2018; @speelmanmcgann_HowMeanMean_2013]. This may cause substantial and relevant portions of variability in whole brain functional networks to be overlooked [@grattonetal_FunctionalBrainNetworks_2018], resulting in unreliable inferences about the ways in which whole brain functional networks differ between individuals [@elliottetal_WhatTestRetestReliability_2020]. Similarly, although the common features of whole brain functional networks can typically be detected with 5-10 minutes of fMRI data when averaging across individuals, more than 25 minutes of data (collected continuously or across multiple scans) are needed to reliably detect network variants [@andersonetal_ReproducibilitySingleSubjectFunctional_2011; @elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @hackeretal_RestingStateNetwork_2013; @laumannetal_FunctionalSystemAreal_2015]. Due to the high cost of scan times, this level of measurement is not feasible for a majority of labs collecting their own data [@elliottetal_GeneralFunctionalConnectivity_2019]. In sum, network variants offer a promising new direction to understand network function, but the conditions required to study them reliably using fMRI are a considerable practical barrier. 
 
-A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for studying network variants beyond the window of fMRI. Electrophysiological recording methods such as electroencephalography (EEG) offer one such solution, given their cost effectiveness relative to fMRI. EEG directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014], which offers two distinct advantages over fMRI. First, it allows us to directly probe the synchronization of neural oscillations in functional networks, bypassing the complexities of linking BOLD signals to the dynamics of underlying neural activity. Second, it allows us to measure neural oscillations at timescales much faster than the infraslow 0.1 Hz oscillations of BOLD signals, making it possible to test whether the organization of network variants is sensitive to timescales [cf., @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. There is currently debate about whether functional network organization is sensitive to timescales [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. One view predicts frequency-specific functional specialization of networks, and is supported by findings that connectivity in different frequency bands has been linked to different neural processes [e.g., @sadaghianikleinschmidt_BrainNetworksAOscillations_2016] and is more prominent in different brain regions following a medial-to-lateral and posterior-to-anterior gradient of increasing frequency [@capillaetal_NaturalFrequenciesResting_2022]. The other view predicts that functional network organization is timescale-invariant, and is supported by computational models that suggest functional networks have a common organization across timescales when averaged over sufficiently long periods [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
+A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for studying network variants. Electroencephalography (EEG) offers one such solution. EEG directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014]. It allows us to directly probe the synchronization of neural oscillations in functional networks, bypassing the complexities of linking BOLD signals to the dynamics of underlying neural activity. It also allows us to measure neural oscillations at timescales much faster than the infraslow 0.1 Hz oscillations of BOLD signals, making it possible to test whether the organization of network variants is sensitive to timescales [cf., @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. There is currently debate about whether functional network organization is sensitive to timescales [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. One view predicts frequency-specific functional specialization of networks, and is supported by findings that connectivity in different frequency bands has been linked to different neural processes [e.g., @sadaghianikleinschmidt_BrainNetworksAOscillations_2016] and is more prominent in different brain regions following a medial-to-lateral and posterior-to-anterior gradient of increasing frequency [@capillaetal_NaturalFrequenciesResting_2022]. The other view predicts that functional network organization is timescale-invariant, and is supported by computational models that suggest functional networks have a common organization across timescales when averaged over sufficiently long periods [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
 
-Given these advantages, EEG has the potential to provide new and complementary information about network variants---specifically their organization at different timescales. However, there are also two disadvantages to note that may pose a challenge for identifying network variants with EEG. First, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009], resulting in spurious estimates of connectivity between regions in functional networks. This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. Second, EEG is generally limited to measuring cortical neural activity and has poor spatial resolution compared to fMRI. This means EEG is not well suited for addressing research questions about deep brain network variants; however, fMRI studies often limit their focus to cortical network variants [e.g., @grattonetal_FunctionalBrainNetworks_2018], so we do not perceive this as a problem. Additionally, although EEG does not have precise spatial resolution, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, network variants should also be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
+There are two disadvantages to EEG that may pose a challenge for identifying network variants. First, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009], resulting in spurious estimates of connectivity between regions in functional networks. This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. Second, EEG is generally limited to measuring cortical neural activity and has poor spatial resolution compared to fMRI. Despite these challenges, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, network variants should also be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
 
 Here, we use EEG data previously collected by our lab as part of a larger study---containing a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant---to answer this question. First we create a functional connectome from each recording by estimating the phase and amplitude coupling between all pairs of EEG channels. Phase and amplitude coupling are thought to reflect different but related neurophysiological functions and it is common to use both measures so they can be compared [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @wirsichetal_RelationshipEEGFMRI_2021]. Specifically, phase coupling is thought to regulate the integration and flow of cognitive contents on fast timescales, and amplitude coupling is thought to coordinate changes in (co)activation of brain areas on slow timescales [@engeletal_IntrinsicCouplingModes_2013]. Then we test for the presence of network variants by estimating how functional connectomes differ between and within individuals using measures of network similarity.
 
 Figure \@ref(fig:similarity-archetype-plots) depicts six archetypal outcomes we could find. The first column shows outcomes that would occur in cases where functional connectomes *do not* differ between individuals. In particular, we might expect to see (1) a *group effect* with high similarity among all measurements regardless of individual, session, or state, which might occur if the brain activity we measured is largely intrinsic and common across individuals [cf. @raichle_TwoViewsBrain_2010]; (2) a *session effect* with high similarity among all measurements regardless of individual or state, but not session, which might occur if the brain activity we measured is largely intrinsic, common across individuals, and varies over time in the same way across individuals; or (3) a *state effect* with high similarity among all measurements regardless of individual or session, but not state, which might occur if the brain activity we measured is largely reactive in a way that is common across individuals [cf. @raichle_TwoViewsBrain_2010]. The second column shows outcomes that would occur in cases where functional connectomes *do* differ between individuals. In particular, we might expect to see (4) an *individual effect* with high similarity among all measurements regardless of session or state, but not individual, which might occur if the brain activity we measured is largely intrinsic and unique within individuals; (5) an *individual-session effect* with high similarity among all measurements regardless of state, but not individual or session, which might occur if the brain activity we measured is largely intrinsic, unique within individuals, and varies over time within individuals; or (6) an *individual-state effect* with high similarity among all measurements regardless of session, but not individual or state, which might occur if the brain activity we measured is largely reactive in a way that is unique within individuals.
 
 ```{r similarity-archetype-plots}
-#| fig.cap: |
-#|   TODO: Write caption.
+#| fig.cap: Similarity matrices depicting six archetypal outcomes of network similarity that could occur if brain activity is common across individuals (group, session, or state effects) or unique within individuals (individual, individual-session, or individual-state effects).
 targets::tar_load(similarity_archetypes_figure)
 knitr::include_graphics(here::here(similarity_archetypes_figure))
 ```
